# BLT-MCP

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  package.json  pyproject.toml
.github/workflows/: test.yml
blt_mcp/: server.py
docs/: index.html
src/: index.ts
tests/: test_resources.py  test_tools.py  test_transport_stdio.py  utils.py
